add upload & convert buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Text detection from Image</title>
   </head>
   <body>
-    <h1>Work in progress...</h1>
+    <h1>Convert image into text</h1>
+    <input type="file" class="btn btn-primary" value="Upload Image" />
+    <input type="submit" class="btn btn-success" value="Convert" />
   </body>
 </html>
